--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -81,5 +81,75 @@ footer {
   margin: 0 auto 0 73px; }
 
 /*==========  footer end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
+/*==========  modal  ==========*/
+.modal-dialog {
+  max-width: 594px; }
+
+.modal-content {
+  border: none;
+    border-radius: 40px;
+  -webkit-box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15);
+  background: #fff;
+  padding: 60px 30px 44px; }
+  .modal-content .box-text {
+    text-align: center;
+    max-width: 340px;
+    margin: 0 auto; }
+
+.modal-header {
+  border: none;
+  padding: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 0 40px; }
+  .modal-header .close {
+    top: 18px;
+    right: 18px;
+    opacity: 1;
+    z-index: 1;
+    background: #5FA17B;
+    cursor: pointer;
+    margin: 0;
+    position: absolute;
+    border: none;
+      border-radius: 50%;
+    width: 46px;
+    height: 46px;
+    padding: 12px;
+    fill: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+
+.modal-title {
+  width: 100%;
+  margin: 0 auto 13px;
+  font-size: 48px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center; }
+
+.modal-body {
+  padding: 0; }
+
+.form {
+  margin: 0 auto;
+  max-width: 410px;
+  width: 100%; }
+  .form button {
+    margin: 0 auto;
+    max-width: 269px;
+    width: 100%;
+    height: 48px;
+    border-radius: 20px;
+    font-size: 20px;
+    line-height: normal; }
+
+/*==========  modal end  ==========*/
