--- a/app/css/header.css
+++ b/app/css/header.css
@@ -1,4 +1,176 @@
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
+/*==========  header  ==========*/
+header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 3;
+  padding: 23px 0; }
+  header .logo {
+    position: relative;
+    z-index: 1; }
+    header .logo:before {
+      content: '';
+      position: absolute;
+      z-index: -1;
+      background: #fff;
+      width: calc(100% + 62px);
+      left: -26px;
+      height: calc(100% + 56px);
+      bottom: -26px;
+      border-radius: 0 0 20px 20px; }
+  header .btn {
+    padding: 0 27px; }
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 56px 0 auto;
+  font-size: 26px;
+  font-weight: 500; }
+  .menu li {
+    margin: 0 28px 0 0; }
+    .menu li:last-child {
+      margin: 0; }
+    .menu li a {
+      color: #fff; }
+      .menu li a:hover {
+        color: #D7DF23; }
+    .menu li .dropdown-item {
+      color: #676767; }
+
+.dropdown-toggle {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .dropdown-toggle__icon {
+    margin: 0 0 0 13px;
+    width: 12px;
+    height: 6px;
+    fill: none;
+    stroke: #D7DF23; }
+  .dropdown-toggle:after {
+    display: none; }
+
+.dropdown-menu {
+  font-size: 18px;
+  font-weight: 400;
+  margin: 5px 0 0;
+  padding: 13px 0;
+  border: none;
+    border-radius: 10px;
+  -webkit-box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15); }
+
+.dropdown-item {
+  padding: 10px 24px 10px 17px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .dropdown-item .dropdown-toggle__icon {
+    fill: none;
+    stroke: #D7DF23;
+    width: 6px;
+    height: 12px; }
+  .dropdown-item:hover {
+    background: transparent;
+    color: #5FA17B; }
+
+.btn-burger {
+  width: 30px;
+  cursor: pointer;
+  display: none; }
+  .btn-burger span {
+    display: block;
+    width: 100%;
+    height: 3px;
+    border-radius: 3px;
+    background: #fff;
+    margin: 0 0 6px; }
+    .btn-burger span:last-child {
+      margin: 0; }
+
+/*==========  header end  ==========*/
+/*==========  mobile menu  ==========*/
+.mobile-menu {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  z-index: 5;
+  overflow-y: auto;
+  padding: 30px;
+  background: #fff;
+  max-width: 290px;
+  width: 100%; }
+  .mobile-menu .menu {
+    margin: 20px 0; }
+    .mobile-menu .menu li {
+      width: 100%;
+      margin: 0 0 15px; }
+    .mobile-menu .menu a {
+      color: #676767; }
+  .mobile-menu .dropdown-menu {
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    -webkit-transform: none !important;
+            transform: none !important;
+    width: 100%;
+    font-size: 15px;
+    background: transparent;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    padding: 0;
+    margin: 10px 0 0; }
+  .mobile-menu .dropdown-item {
+    padding: 5px 15px; }
+    .mobile-menu .dropdown-item br {
+      display: none; }
+  .mobile-menu .logo {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .mobile-menu .logo-icon {
+    margin: 0 auto 10px; }
+  .mobile-menu .logo-text {
+    margin: 0;
+    max-width: none; }
+
+.btn-close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  fill: #5FA17B;
+  width: 20px;
+  height: 20px; }
+
+/*==========  mobile menu end  ==========*/
+.header {
+  position: relative;
+  margin: 0 0 17px; }
+  .header .menu li a {
+    color: #5FA17B; }
+    .header .menu li a:hover {
+      color: #676767; }
+  .header .btn-burger span {
+    background: #5FA17B; }
