--- a/app/sass/footer.sass
+++ b/app/sass/footer.sass
@@ -63,6 +63,67 @@ footer
 
 
 
-/*==========  section  ==========*/
+/*==========  modal  ==========*/
+.modal-dialog
+  max-width: 594px
 
-/*==========  section end  ==========*/
+.modal-content
+  border: none
+    radius: 40px
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15)
+  background: #fff
+  padding: 60px 30px 44px
+  .box-text
+    text-align: center
+    max-width: 340px
+    margin: 0 auto
+
+.modal-header
+  border: none
+  padding: 0
+  flex-wrap: wrap
+  margin: 0 0 40px
+  .close
+    top: 18px
+    right: 18px
+    opacity: 1
+    z-index: 1
+    background: $accent
+    cursor: pointer
+    margin: 0
+    position: absolute
+    border: none
+      radius: 50%
+    width: 46px
+    height: 46px
+    padding: 12px
+    fill: #fff
+    display: flex
+    align-items: center
+    justify-content: center
+
+.modal-title
+  width: 100%
+  margin: 0 auto 13px
+  font-size: 48px
+  font-weight: bold
+  text-transform: uppercase
+  text-align: center
+
+.modal-body
+  padding: 0
+
+.form
+  margin: 0 auto
+  max-width: 410px
+  width: 100%
+  button
+    margin: 0 auto
+    max-width: 269px
+    width: 100%
+    height: 48px
+    border-radius: 20px
+    font-size: 20px
+    line-height: normal
+
+/*==========  modal end  ==========*/
