--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -1,11 +1,166 @@
 @import "vars"
 
-/*==========  section  ==========*/
+/*==========  header  ==========*/
+header
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  z-index: 3
+  padding: 23px 0
+  .logo
+    position: relative
+    z-index: 1
+    &:before
+      content: ''
+      position: absolute
+      z-index: -1
+      background: #fff
+      width: calc(100% + 62px)
+      left: -26px
+      height: calc(100% + 56px)
+      bottom: -26px
+      border-radius: 0 0 20px 20px
+  .btn
+    padding: 0 27px
 
-/*==========  section end  ==========*/
+.menu
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  margin: 0 56px 0 auto
+  font-size: 26px
+  font-weight: 500
+  li
+    margin: 0 28px 0 0
+    &:last-child
+      margin: 0
+    a
+      color: #fff
+      &:hover
+        color: $green
+    .dropdown-item
+      color: #676767
+
+
+.dropdown-toggle
+  padding: 0
+  display: flex
+  align-items: center
+  &__icon
+    margin: 0 0 0 13px
+    width: 12px
+    height: 6px
+    fill: none
+    stroke: #D7DF23
+  &:after
+    display: none
+
+.dropdown-menu
+  font-size: 18px
+  font-weight: 400
+  margin: 5px 0 0
+  padding: 13px 0
+  border: none
+    radius: 10px
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15)
+
+.dropdown-item
+  padding: 10px 24px 10px 17px
+  display: flex
+  align-items: center
+  .dropdown-toggle__icon
+    fill: none
+    stroke: $green
+    width: 6px
+    height: 12px
+  &:hover
+    background: transparent
+    color: $accent
+
+.btn-burger
+  width: 30px
+  cursor: pointer
+  display: none
+  span
+    display: block
+    width: 100%
+    height: 3px
+    border-radius: 3px
+    background: #fff
+    margin: 0 0 6px
+    &:last-child
+      margin: 0
+/*==========  header end  ==========*/
 
 
 
-/*==========  section  ==========*/
+/*==========  mobile menu  ==========*/
+.mobile-menu
+  display: none
+  position: fixed
+  left: 0
+  top: 0
+  height: 100%
+  z-index: 5
+  overflow-y: auto
+  padding: 30px
+  background: #fff
+  max-width: 290px
+  width: 100%
+  .menu
+    margin: 20px 0
+    li
+      width: 100%
+      margin: 0 0 15px
+    a
+      color: $grey
+  .dropdown-menu
+    position: relative !important
+    top: 0 !important
+    left: 0 !important
+    transform: none !important
+    width: 100%
+    font-size: 15px
+    background: transparent
+    border-radius: 0
+    box-shadow: none
+    padding: 0
+    margin: 10px 0 0
+  .dropdown-item
+    padding: 5px 15px
+    br
+      display: none
+  .logo
+    flex-direction: column
+    align-items: center
+  .logo-icon
+    margin: 0 auto 10px
+  .logo-text
+    margin: 0
+    max-width: none
 
-/*==========  section end  ==========*/
+.btn-close
+  position: absolute
+  right: 20px
+  top: 20px
+  fill: $accent
+  width: 20px
+  height: 20px
+
+/*==========  mobile menu end  ==========*/
+
+
+.header
+  position: relative
+  margin: 0 0 17px
+  .menu
+    li
+      a
+        color: #5FA17B
+        &:hover
+          color: $grey
+
+  .btn-burger
+    span
+      background: $accent
