--- a/app/sass/home.sass
+++ b/app/sass/home.sass
@@ -1,35 +1,133 @@
 @import "vars"
 
+/*==========  section home ==========*/
+.home
+  width: 100%
+  position: relative
+  .slider-nav
+    position: absolute
+    left: 0
+    bottom: 44px
+    margin: 0
 
+.home-slider
+  width: 100%
+  position: relative
+  color: #fff
 
-/*==========  section  ==========*/
+  &__bg
+    position: absolute
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    object-fit: cover
+    z-index: -1
+  .slick-slide
+    position: relative
+    &:before
+      content: ''
+      position: absolute
+      left: 0
+      top: 0
+      height: 100%
+      width: calc(100% - 262px)
+      background: linear-gradient(90deg, #266D45 0%, rgba(38, 109, 69, 0) 59.95%)
+      z-index: 1
 
-/*==========  section end  ==========*/
+.home-item
+  position: relative
+  z-index: 2
+  margin: 190px 0 176px
+  font-size: 18px
+  line-height: 21px
+  .btn-group
+    .btn-white
+      color: #000000
+      font-weight: normal
+      font-size: 14px
+      min-width: 255px
+  .box-text
+    max-width: 697px
+    margin: 0 0 46px
 
+.home-slider__title
+  margin: 13px 0 32px
+  font-size: 58px
+  line-height: 67px
+  font-weight: bold
 
-/*==========  section  ==========*/
+.home-slider__nav
+  display: flex
+  align-items: center
+  .slick-dots
+    margin: 0 33px
+  .slick-next
+    order: 1
+  .slick-prev
+    margin: 0
 
-/*==========  section end  ==========*/
-
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
-
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
+/*==========  section home end  ==========*/
 
 
 
 /*==========  section about ==========*/
+.about
+  padding: 80px 0 109px
+  background: $accent url("../img/about-bg.png") no-repeat right bottom
+    size: 991px
+
+  h2
+    margin: 0 0 30px
+
+.about-content
+  margin: 0 0 43px
+  .box-text
+    font-size: 18px
+    line-height: 21px
+    max-width: 720px
+
+.tasks-content
+  h2
+    margin: 0 0 70px
+
+.about-box
+  color: #676767
+  width: 100%
+  height: 100%
+  background: #fff
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15)
+  border-radius: 40px
+  padding: 53px 25px 77px 39px
+  &__head
+    width: 100%
+    display: flex
+    align-items: center
+    margin: 0 0 54px
+  h3
+    text-transform: uppercase
+    font-size: 28px
+    font-weight: 700
+  &__icon
+    margin: 0 24px 0 0
+    max-width: 73px
+    width: 100%
+    height: 80px
+    min-width: 73px
+    img
+      max-height: 100%
+  &__body
+    line-height: 21px
+    font-size: 18px
+    max-width: 320px
+
 
 /*==========  section about end  ==========*/
 
 /*==========  section news ==========*/
 .news
   margin: 97px 0 55px
+
   h2
     margin: 0 0 50px
 
@@ -40,6 +138,7 @@
     radius: 20px
   overflow: hidden
   font-size: 18px
+
   &__img
     border-radius: 20px 20px 0 0
     overflow: hidden
@@ -48,28 +147,34 @@
     display: flex
     align-items: center
     justify-content: center
+
     img
       width: 100%
       height: 100%
-      object-fit: contain
+      object-fit: cover
+
   &__body
     width: 100%
     height: calc(100% - 398px)
     padding: 30px 30px 57px
     display: flex
     flex-direction: column
+
   &__name
     color: #676767
     font-size: 18px
     font-weight: 500
     text-align: center
     margin: 0 auto 42px
+
     &:hover
       color: $accent
+
   .date
     text-align: center
     margin: 0 auto 30px
     color: #13AF67
+
   .btn
     margin: auto auto 0
     max-width: 255px
@@ -94,20 +199,24 @@
 
 .actual-quote-item
   width: 100%
+
   .box-text
     display: flex
     align-items: flex-start
     justify-content: space-between
     line-height: 41px
     font-size: 36px
+
     &:before, &:after
       content: ''
       font-size: 144px
       text-transform: uppercase
       line-height: 165px
+
     &:before
       margin: -60px 44px 0 0
       content: '«'
+
     &:after
       content: '»'
       margin: -60px 0 0 44px
@@ -136,9 +245,11 @@
 
 .calculate-title
   max-width: 300px
+
   h2
     font-size: 36px
     line-height: 47px
+
   .box-text
     margin: 11px 0 0
     font-size: 18px
@@ -149,12 +260,14 @@
   align-items: flex-start
   justify-content: space-between
   width: calc(100% - 300px)
-  padding: 0 0 0 33px
+  padding: 5px 0 0 33px
+
   label
     max-width: 256px
 
   .form-group
     max-width: 201px
+
     button
       padding: 0
       width: 100%
