--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -3,53 +3,412 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px)
-	/**/
+@media only screen and (max-width: 1650px)
+  .attention-text
+    max-width: 450px
 
+  .organization-name
+    max-width: 350px
+
+  .list-documents
+    margin: 0 auto
+
+  .info-text
+    max-width: 500px
+
+  .about-box h3
+    font-size: 22px
+
+@media only screen and (max-width: 1570px)
+  header
+    .logo-text
+      max-width: 400px
+
+@media only screen and (max-width: 1480px)
+  .list-documents li
+    margin: 0 20px 0 0
+
+  .copyright
+    margin: 0 auto
+
+  .organization-name
+    max-width: 300px
+
+  .attention-text
+    max-width: 350px
+
+  .news
+    margin: 50px 0 30px
+    h2
+      margin: 0 0 30px
+
+  .news-box
+    &__img
+      height: 320px
+    &__body
+      height: calc(100% - 320px)
+      padding: 20px
+
+  .menu
+    font-size: 24px
+    li
+      margin: 0 20px 0 0
+
+  header
+    .logo-icon
+      max-width: 60px
+    .logo-text
+      max-width: 350px
+
+  .task-section:before
+    width: 650px
+    height: 620px
+    top: -30px
+    right: 0
+
+@media only screen and (max-width: 1370px)
+  .info-text
+    max-width: 375px
+
+  .attention-text
+    max-width: 340px
+
+  .info-link
+    margin: 0 auto
+
+  .about-box h3
+    font-size: 18px
+
+  .about-box__icon
+    width: 60px
+    min-width: 60px
+    max-width: 60px
+    height: 70px
+    margin: 0 10px 0 0
+
+  .about-box__head
+    margin: 0 0 20px
+
+  .about
+    -webkit-background-size: 800px
+    background-size: 800px
+
+  .home-slider__title
+    font-size: 50px
+    line-height: normal
+
+  .menu
+    font-size: 18px
+    margin: 0 30px 0 auto
+
+@media only screen and (max-width: 1240px)
+  .info-link
+    max-width: none
+    width: 100%
+    margin: 10px auto
+    text-align: center
+
+  footer
+    .logo
+      justify-content: center
+      max-width: none
+      width: 100%
+
+  .organization-name
+    max-width: 50%
+    margin: 10px 0 0
+
+  .attention-text
+    max-width: 50%
+    margin: 10px 0 0
+
+  .info-text
+    width: 100%
+    max-width: none
+    margin: 10px auto 0
+    text-align: center
+    padding: 0 90px
+
+  .counter
+    position: absolute
+    bottom: 0
+    right: 15px
+
+  .list-documents
+    max-width: none
+    width: 100%
+    justify-content: center
+    margin: 10px auto 0
+
+  .copyright
+    margin: 0 0 0 auto
+
+@media only screen and (max-width: 1200px)
+  .form-calculate
+    width: 100%
+    padding: 0
+    margin: 20px 0 0
+
+    label, .form-group
+      max-width: 32%
+      width: 100%
+
+  .calculate-title
+    text-align: center
+    max-width: none
+    width: 100%
+
+  .calculate-wrapper
+    padding: 30px
+
+  .calculate-section
+    margin: 60px 0
+
+  .actual-quote-item .box-text
+    font-size: 30px
+    line-height: normal
+    &:after, &:before
+      font-size: 120px
+
+  .actual-quote-slider
+    padding: 40px
+
+  h2
+    font-size: 40px
+    line-height: normal
+
+  .actual-quote h2
+    margin: 0 auto 30px
+
+  header
+    .menu
+      display: none
+    .logo
+      margin: 0 auto 0 0
+
+  .btn-burger
+    display: block
+    margin: 0 0 0 20px
+
+  .project-card
+    padding: 20px
+    margin: 0 0 40px
+    font-size: 16px
+    .box-text
+      font-size: 16px
+    h3
+      font-size: 30px
+      margin: 20px 0
+    &__body
+      padding: 0 0 0 30px
 
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px)
-	/**/
+@media only screen and (max-width: 992px)
+  .actual-quote-item
+    .box-text
+      font-size: 22px
+      line-height: normal
+      &:before, &:after
+        font-size: 80px
+        line-height: 1
+      &:before
+        margin: -20px 20px 0 0
+      &:after
+        margin: -20px 0 0 20px
 
+  .home-slider .slick-slide:before
+    width: 100%
 
-/* Small Devices, Tablets */
-@media only screen and (max-width : 768px)
-	/**/
+  .mission-img
+    margin: 30px 0 0
 
-
-/* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px)
-	/**/
-
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width : 320px)
-	/**/
-
-
-/*==========  Mobile First  ==========*/
-
-/* Custom, iPhone Retina */
-@media only screen and (min-width : 320px)
-	/**/
-
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px)
-	/**/
-
+  h1
+    font-size: 40px
 
 /* Small Devices, Tablets */
-@media only screen and (min-width : 768px)
-	/**/
+@media only screen and (max-width: 768px)
+  .calculate-section
+    margin: 40px 0
+
+  .form-calculate
+    flex-wrap: wrap
+    label, .form-group
+      max-width: none
+    .form-group
+      margin: 0
+    button
+      height: 50px
+    h2
+      font-size: 30px
+
+  h2
+    font-size: 36px
+
+  .quote-author
+    font-size: 20px
+
+  .about
+    -webkit-background-size: 100%
+    background-size: 100%
+    padding: 60px 0
+
+  .tasks-content
+    h2
+      margin: 0 0 30px
+
+  .home-slider__title
+    font-size: 40px
+
+  header
+    padding: 15px 0
+    .btn
+      font-size: 14px
+    .logo-text
+      max-width: 260px
+    .logo
+      &:before
+        width: calc(100% + 30px)
+        left: -15px
+        bottom: -15px
+        height: calc(100% + 30px)
+
+  .modal-title
+    font-size: 40px
+    line-height: normal
+
+  h1
+    font-size: 30px
+
+  .task-section:before
+    width: 100%
+    height: 100%
+    top: auto
+
+    bottom: -90px
+
+  .project-card
+    &__img
+      margin: 0 auto 20px
+    &__body
+      width: 100%
+      padding: 0
+    h3
+      font-size: 24px
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 576px)
+  .info-text
+    padding: 0
+
+  .counter
+    display: none
+
+  footer
+    padding: 30px 0
 
 
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px)
-	/**/
+  .attention-text, .organization-name
+    max-width: 100%
+
+  .list-documents
+    flex-direction: column
+    align-items: center
+
+    li
+      margin: 0 auto 10px
+
+  h2
+    font-size: 30px
+
+  .actual-quote-item
+    .box-text
+      font-size: 20px
+      &:before, &:after
+        font-size: 50px
+        margin-top: -15px
+
+  .actual-quote-slider
+    padding: 30px
+    border-radius: 20px
+
+  .about-box
+    padding: 30px
+    &__body
+      font-size: 16px
+      max-width: none
+
+  .home-slider__title
+    font-size: 30px
+
+  .home-item
+    margin: 140px 0 176px
+    .btn-group
+      flex-direction: column
+      align-items: flex-start
+      .btn
+        margin: 0 0 10px
+        padding: 0 20px
+        max-width: 270px
+        width: 100%
+
+  .box-text
+    font-size: 16px
+    line-height: normal
+
+  header
+    .logo-text
+      display: none
+    .logo-icon
+      margin: 0
 
 
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px)
-	/**/
+  .modal-title
+    font-size: 30px
+
+  .modal-header
+    margin: 0 0 20px
+    .close
+      padding: 10px
+      width: 36px
+      height: 36px
+
+  input, textarea, select
+    font-size: 16px
+
+  input, select
+    height: 50px
+
+  h1
+    font-size: 24px
+    margin: 0 0 30px
+
+  .mission
+    margin: 0 0 50px
+
+  .task-section:before
+    display: none
+
+  .mission-img
+    height: 300px
+
+  .projects
+    margin: 0 0 70px
+
+@media only screen and (max-width: 480px)
+  .actual-quote-item
+    .box-text
+      &:before, &:after
+        display: none
+
+  .home-slider__title
+    font-size: 24px
+
+  .project-card
+    &__img
+      height: auto
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width: 320px)
+  /**/
+
 
