--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -118,7 +118,7 @@ button, .btn
 
 .consent
   text-align: center
-  max-width: 243px
+  max-width: 250px
   font-size: 14px
   margin: 23px auto 0
 
@@ -158,6 +158,28 @@ button, .btn
     background: $green
     color: #fff
 
+.btn-border-white
+  border: 1px solid #fff
+    radius: 20px
+  padding: 0 42px
+  font-size: 14px
+  background: transparent
+  color: #fff
+  &:hover
+    background: #fff
+    color: $accent
+
+.btn-group
+  .btn
+    border-radius: 20px
+    margin: 0 30px 0 0
+    &:last-child
+      margin: 0
+
+.btn-group>.btn-group:not(:last-child)>.btn, .btn-group>.btn:not(:last-child):not(.dropdown-toggle), .btn-group>.btn-group:not(:first-child)>.btn, .btn-group>.btn:not(:first-child)
+  border-radius: 20px
+
+
 .svg-icon
   display: inline-block
   width: 100%
@@ -192,6 +214,13 @@ a.color-accent
 
 .mb-50
   margin-bottom: 50px
+
+h1
+  width: 100%
+  margin: 0 0 34px
+  font-size: 48px
+  font-weight: bold
+  text-transform: uppercase
 
 h2
   font-weight: bold
@@ -247,6 +276,39 @@ h2
     background: $green
     fill: #fff
 
+.slick-arrow-border
+  background: transparent
+  border: 1px solid #fff
+  &:hover
+    background: $accent
+    fill: #fff
+
+.slick-dots
+  position: relative
+  bottom: 0
+  display: flex
+  align-items: center
+  justify-content: center
+  width: fit-content
+  li
+    cursor: pointer
+    z-index: 1
+    transition: .3s ease
+    margin: 0 10px 0 0
+    width: 10px
+    height: 10px
+    list-style: none
+    border: 1px solid #FFFFFF
+      radius: 50%
+    &:last-child
+      margin: 0
+    &:hover
+      background: #fff
+    button
+      display: none
+    &.slick-active
+      background: #fff
+
 .slider-nav
   width: 100%
   display: flex
@@ -255,3 +317,43 @@ h2
   margin: 37px 0 0
   .slick-prev
     margin: 0 30px 0 0
+
+.box-text
+  font-size: 18px
+  line-height: 21px
+  p
+    margin: 0 0 18px
+    &:last-child
+      margin: 0
+
+.breadcrumb-nav
+  margin: 0 0 28px
+  width: 100%
+
+.breadcrumb
+  width: 100%
+  background: transparent
+  border: none
+    radius: 0
+  color: #676767
+  font-size: 18px
+  padding: 0
+
+
+.breadcrumb-item+.breadcrumb-item::before
+  display: none
+
+.breadcrumb-item
+  padding: 0
+
+  a
+    color: #676767
+    display: flex
+    align-items: center
+    &:after
+      content: '>'
+      margin: 0 5px
+
+
+.breadcrumb-item+.breadcrumb-item
+  padding: 0
