--- a/app/css/style.css
+++ b/app/css/style.css
@@ -166,7 +166,9 @@ button, .btn {
   color: #fff;
   background: #5FA17B;
   -webkit-box-shadow: 0 4px 14px rgba(60, 170, 59, 0.4);
-          box-shadow: 0 4px 14px rgba(60, 170, 59, 0.4); }
+          box-shadow: 0 4px 14px rgba(60, 170, 59, 0.4);
+  max-width: 255px;
+  width: 100%; }
   .btn-accent:hover {
     background: #D7DF23;
     color: #fff; }
@@ -230,6 +232,9 @@ a.color-accent:hover {
 
 .mb-30 {
   margin-bottom: 30px; }
+
+.mb-40 {
+  margin-bottom: 40px; }
 
 .mb-50 {
   margin-bottom: 50px; }
