--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -146,6 +146,8 @@ button, .btn
   color: #fff
   background: $accent
   box-shadow: 0 4px 14px rgba(60, 170, 59, 0.4)
+  max-width: 255px
+  width: 100%
   &:hover
     background: $green
     color: #fff
@@ -211,6 +213,9 @@ a.color-accent
 
 .mb-30
   margin-bottom: 30px
+
+.mb-40
+  margin-bottom: 40px
 
 .mb-50
   margin-bottom: 50px
