--- a/app/css/contacts.css
+++ b/app/css/contacts.css
@@ -1,16 +1,59 @@
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
+/*==========  section contacts ==========*/
+.contacts {
+  margin: 0 0 62px; }
+  .contacts h2 {
+    margin: 0 0 32px; }
+  .contacts .btn {
+    max-width: 269px;
+    width: 100%;
+    height: 48px; }
+  .contacts .name-company {
+    font-size: 36px;
+    margin: 0 0 38px; }
+
+.address {
+  font-size: 36px; }
+
+.contacts-box {
+  margin: 0 0 38px; }
+  .contacts-box span {
+    display: block;
+    text-transform: uppercase;
+    color: #5FA17B;
+    font-size: 24px;
+    margin: 0 0 10px; }
+
+.mail {
+  font-size: 36px;
+  color: #676767; }
+  .mail:hover {
+    color: #5FA17B; }
+
+.doctor-box {
+  margin: 0 0 19px;
+  font-size: 18px;
+  max-width: 676px; }
+  .doctor-box span {
+    color: #5FA17B;
+    display: block;
+    text-transform: none;
+    margin: 0;
+    font-size: 18px; }
+
+.name-doctor {
+  font-weight: bold; }
+
+.position {
+  margin: 30px 0 0; }
+
+.mail-doctor {
+  margin: 19px 0 0;
+  color: #676767;
+  font-size: 24px;
+  font-weight: bold; }
+  .mail-doctor:hover {
+    color: #5FA17B; }
+
+/*==========  section contacts end  ==========*/
 /*==========  section  ==========*/
 /*==========  section end  ==========*/
