--- a/app/css/media.css
+++ b/app/css/media.css
@@ -14,7 +14,10 @@
 
 @media only screen and (max-width: 1570px) {
   header .logo-text {
-    max-width: 400px; } }
+    max-width: 400px; }
+  .home-slider__title {
+    font-size: 48px;
+    line-height: normal; } }
 
 @media only screen and (max-width: 1480px) {
   .list-documents li {
@@ -143,7 +146,7 @@
   header .menu {
     display: none; }
   header .logo {
-    margin: 0 auto 0 0; }
+    margin: 0 auto 0 26px; }
   .btn-burger {
     display: block;
     margin: 0 0 0 20px; }
@@ -157,7 +160,21 @@
       font-size: 30px;
       margin: 20px 0; }
     .project-card__body {
-      padding: 0 0 0 30px; } }
+      padding: 0 0 0 30px; }
+  .mail {
+    font-size: 24px; }
+  .contacts-box {
+    margin: 0 0 30px; }
+    .contacts-box span {
+      font-size: 20px; }
+  .contacts .name-company, .address {
+    font-size: 30px; }
+  .contacts {
+    margin: 0 0 50px; }
+  .partners-box {
+    padding: 30px; }
+    .partners-box__body {
+      padding: 0 0 0 20px; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
@@ -176,7 +193,22 @@
   .mission-img {
     margin: 30px 0 0; }
   h1 {
-    font-size: 40px; } }
+    font-size: 40px; }
+  .contacts .name-company, .address {
+    font-size: 24px; }
+  .address {
+    margin: 0 0 30px; }
+  .doctor-box {
+    margin: 0; }
+  .partners-box {
+    padding: 20px; }
+    .partners-box__icon {
+      max-width: 100px; }
+    .partners-box__body {
+      width: calc(100% - 100px); }
+    .partners-box__name {
+      font-size: 20px;
+      margin: 0 0 20px; } }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
@@ -210,11 +242,13 @@
       font-size: 14px; }
     header .logo-text {
       max-width: 260px; }
-    header .logo:before {
-      width: calc(100% + 30px);
-      left: -15px;
-      bottom: -15px;
-      height: calc(100% + 30px); }
+    header .logo {
+      margin: 0 auto 0 15px; }
+      header .logo:before {
+        width: calc(100% + 30px);
+        left: -15px;
+        bottom: -15px;
+        height: calc(100% + 30px); }
   .modal-title {
     font-size: 40px;
     line-height: normal; }
@@ -231,7 +265,13 @@
     width: 100%;
     padding: 0; }
   .project-card h3 {
-    font-size: 24px; } }
+    font-size: 24px; }
+  .contacts .name-company, .address, .mail, .contacts-box span, .mail-doctor {
+    font-size: 18px; }
+  .contacts .name-company {
+    margin: 0 0 24px; }
+  .contacts .btn {
+    font-size: 18px; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 576px) {
@@ -288,10 +328,13 @@
   .box-text {
     font-size: 16px;
     line-height: normal; }
-  header .logo-text {
+  header .btn {
     display: none; }
+  header .logo-text {
+    max-width: 200px;
+    margin: 0 0 0 10px; }
   header .logo-icon {
-    margin: 0; }
+    max-width: 40px; }
   .modal-title {
     font-size: 30px; }
   .modal-header {
@@ -314,7 +357,11 @@
   .mission-img {
     height: 300px; }
   .projects {
-    margin: 0 0 70px; } }
+    margin: 0 0 70px; }
+  .mb-40 {
+    margin-bottom: 30px; }
+  .partners {
+    margin: 0 0 30px; } }
 
 @media only screen and (max-width: 480px) {
   .actual-quote-item .box-text:before, .actual-quote-item .box-text:after {
@@ -322,7 +369,15 @@
   .home-slider__title {
     font-size: 24px; }
   .project-card__img {
-    height: auto; } }
+    height: auto; }
+  header .logo-text {
+    max-width: 160px; }
+  .partners-box__icon {
+    max-width: 80px; }
+  .partners-box__body {
+    width: calc(100% - 80px); }
+  .partners-box__name {
+    font-size: 18px; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px) {
