--- a/app/sass/contacts.sass
+++ b/app/sass/contacts.sass
@@ -1,44 +1,68 @@
 @import "vars"
 
+/*==========  section contacts ==========*/
+.contacts
+  margin: 0 0 62px
+  h2
+    margin: 0 0 32px
+  .btn
+    max-width: 269px
+    width: 100%
+    height: 48px
+  .name-company
+    font-size: 36px
+    margin: 0 0 38px
+
+.address
+  font-size: 36px
+
+.contacts-box
+  margin: 0 0 38px
+  span
+    display: block
+    text-transform: uppercase
+    color: $accent
+    font-size: 24px
+    margin: 0 0 10px
+
+.mail
+  font-size: 36px
+  color: #676767
+  &:hover
+    color: $accent
+
+.doctor-box
+  margin: 0 0 19px
+  font-size: 18px
+  max-width: 676px
+  span
+    color: $accent
+    display: block
+    text-transform: none
+    margin: 0
+    font-size: 18px
+
+.name-doctor
+  font-weight: bold
+
+.position
+  margin: 30px 0 0
+
+.mail-doctor
+  margin: 19px 0 0
+  color: #676767
+  font-size: 24px
+  font-weight: bold
+  &:hover
+    color: $accent
+
+/*==========  section contacts end  ==========*/
+
+
+
 /*==========  section  ==========*/
 
 /*==========  section end  ==========*/
 
 
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
-
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
-
-
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
-
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
-
-
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
-
-
-
-/*==========  section  ==========*/
-
-/*==========  section end  ==========*/
 
