--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -11,6 +11,7 @@ header
   .logo
     position: relative
     z-index: 1
+    margin: 0 0 0 26px
     &:before
       content: ''
       position: absolute
@@ -23,6 +24,8 @@ header
       border-radius: 0 0 20px 20px
   .btn
     padding: 0 27px
+    max-width: none
+    width: fit-content
 
 .menu
   display: flex
@@ -154,6 +157,10 @@ header
 .header
   position: relative
   margin: 0 0 17px
+  .logo
+    margin-left: 0
+    &:before
+      display: none
   .menu
     li
       a
