--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -24,6 +24,10 @@
     .logo-text
       max-width: 400px
 
+  .home-slider__title
+    font-size: 48px
+    line-height: normal
+
 @media only screen and (max-width: 1480px)
   .list-documents li
     margin: 0 20px 0 0
@@ -39,24 +43,28 @@
 
   .news
     margin: 50px 0 30px
+
     h2
       margin: 0 0 30px
 
   .news-box
     &__img
       height: 320px
+
     &__body
       height: calc(100% - 320px)
       padding: 20px
 
   .menu
     font-size: 24px
+
     li
       margin: 0 20px 0 0
 
   header
     .logo-icon
       max-width: 60px
+
     .logo-text
       max-width: 350px
 
@@ -167,6 +175,7 @@
   .actual-quote-item .box-text
     font-size: 30px
     line-height: normal
+
     &:after, &:before
       font-size: 120px
 
@@ -183,8 +192,9 @@
   header
     .menu
       display: none
+
     .logo
-      margin: 0 auto 0 0
+      margin: 0 auto 0 26px
 
   .btn-burger
     display: block
@@ -194,13 +204,37 @@
     padding: 20px
     margin: 0 0 40px
     font-size: 16px
+
     .box-text
       font-size: 16px
+
     h3
       font-size: 30px
       margin: 20px 0
+
     &__body
       padding: 0 0 0 30px
+
+  .mail
+    font-size: 24px
+
+
+  .contacts-box
+    margin: 0 0 30px
+
+    span
+      font-size: 20px
+
+  .contacts .name-company, .address
+    font-size: 30px
+
+  .contacts
+    margin: 0 0 50px
+
+  .partners-box
+    padding: 30px
+    &__body
+      padding: 0 0 0 20px
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px)
@@ -208,11 +242,14 @@
     .box-text
       font-size: 22px
       line-height: normal
+
       &:before, &:after
         font-size: 80px
         line-height: 1
+
       &:before
         margin: -20px 20px 0 0
+
       &:after
         margin: -20px 0 0 20px
 
@@ -225,6 +262,25 @@
   h1
     font-size: 40px
 
+  .contacts .name-company, .address
+    font-size: 24px
+
+  .address
+    margin: 0 0 30px
+
+  .doctor-box
+    margin: 0
+
+  .partners-box
+    padding: 20px
+    &__icon
+      max-width: 100px
+    &__body
+      width: calc(100% - 100px)
+    &__name
+      font-size: 20px
+      margin: 0 0 20px
+
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px)
   .calculate-section
@@ -232,12 +288,16 @@
 
   .form-calculate
     flex-wrap: wrap
+
     label, .form-group
       max-width: none
+
     .form-group
       margin: 0
+
     button
       height: 50px
+
     h2
       font-size: 30px
 
@@ -261,11 +321,16 @@
 
   header
     padding: 15px 0
+
     .btn
       font-size: 14px
+
     .logo-text
       max-width: 260px
+
     .logo
+      margin: 0 auto 0 15px
+
       &:before
         width: calc(100% + 30px)
         left: -15px
@@ -289,11 +354,23 @@
   .project-card
     &__img
       margin: 0 auto 20px
+
     &__body
       width: 100%
       padding: 0
+
     h3
       font-size: 24px
+
+
+  .contacts .name-company, .address, .mail, .contacts-box span, .mail-doctor
+    font-size: 18px
+
+  .contacts .name-company
+    margin: 0 0 24px
+
+  .contacts .btn
+    font-size: 18px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 576px)
@@ -323,6 +400,7 @@
   .actual-quote-item
     .box-text
       font-size: 20px
+
       &:before, &:after
         font-size: 50px
         margin-top: -15px
@@ -333,6 +411,7 @@
 
   .about-box
     padding: 30px
+
     &__body
       font-size: 16px
       max-width: none
@@ -342,9 +421,11 @@
 
   .home-item
     margin: 140px 0 176px
+
     .btn-group
       flex-direction: column
       align-items: flex-start
+
       .btn
         margin: 0 0 10px
         padding: 0 20px
@@ -356,10 +437,15 @@
     line-height: normal
 
   header
-    .logo-text
+    .btn
       display: none
+
+    .logo-text
+      max-width: 200px
+      margin: 0 0 0 10px
+
     .logo-icon
-      margin: 0
+      max-width: 40px
 
 
   .modal-title
@@ -367,6 +453,7 @@
 
   .modal-header
     margin: 0 0 20px
+
     .close
       padding: 10px
       width: 36px
@@ -394,6 +481,12 @@
   .projects
     margin: 0 0 70px
 
+  .mb-40
+    margin-bottom: 30px
+
+  .partners
+    margin: 0 0 30px
+
 @media only screen and (max-width: 480px)
   .actual-quote-item
     .box-text
@@ -406,6 +499,18 @@
   .project-card
     &__img
       height: auto
+
+  header
+    .logo-text
+      max-width: 160px
+
+  .partners-box
+    &__icon
+      max-width: 80px
+    &__body
+      width: calc(100% - 80px)
+    &__name
+      font-size: 18px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
