--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -281,6 +281,44 @@
       font-size: 20px
       margin: 0 0 20px
 
+  .partner-image
+    margin: 30px 0 0
+    height: auto
+
+  .partner-page
+    margin: 0 0 60px
+
+  .project-page
+    margin: 0 0 40px
+
+  .sidebar
+    display: none
+
+    position: fixed
+    left: 0
+    top: 0
+    height: 100%
+    overflow-y: auto
+    width: 100%
+    max-width: 280px
+    background: #FFFFFF
+    z-index: 3
+    padding: 20px
+
+  .description-text
+    margin: 0 0 30px
+
+  .menu-project
+    font-size: 16px
+    li
+      margin: 0
+
+  .btn-close-sidebar
+    display: block
+
+  .btn-sidebar
+    margin: 0 0 30px
+
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px)
   .calculate-section
@@ -371,6 +409,17 @@
 
   .contacts .btn
     font-size: 18px
+
+  .partner-info
+    margin: 0 0 30px
+
+
+
+  .partner-content .box-text
+    font-size: 16px
+    line-height: normal
+    p
+      margin: 0 0 20px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 576px)
@@ -487,6 +536,12 @@
   .partners
     margin: 0 0 30px
 
+  .partner-name
+    padding: 0 0 0 20px
+
+  .partner-links
+    font-size: 18px
+
 @media only screen and (max-width: 480px)
   .actual-quote-item
     .box-text
@@ -511,6 +566,16 @@
       width: calc(100% - 80px)
     &__name
       font-size: 18px
+
+  .partner-info
+    flex-direction: column
+    align-items: flex-start
+
+  .partner-name
+    padding: 0
+    margin: 20px 0 0
+    width: 100%
+
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
