--- a/app/sass/partners.sass
+++ b/app/sass/partners.sass
@@ -40,9 +40,56 @@
 
 
 
-/*==========  section  ==========*/
+/*==========  section partner-page ==========*/
+.partner-page
+  margin: 0 0 124px
 
-/*==========  section end  ==========*/
+.partner-content
+  .box-text
+    font-size: 18px
+    line-height: 21px
+    color: #676767
+    p
+      margin: 0 0 35px
+
+.partner-info
+  display: flex
+  align-items: flex-start
+  margin: 0 0 70px
+  h1
+    max-width: 490px
+    margin: 0 0 26px
+
+.partner-links
+  color: #5FA17B
+  font-size: 24px
+  &:hover
+    color: $grey
+
+.partner-logo
+  max-width: 128px
+  width: 100%
+  display: flex
+  align-items: center
+
+.partner-name
+  width: calc(100% - 128px)
+  padding: 0 0 0 56px
+
+.partner-image
+  width: 100%
+  height: 599px
+  border-radius: 10px
+  overflow: hidden
+  display: flex
+  align-items: center
+  justify-content: center
+  img
+    width: 100%
+    height: 100%
+    object-fit: cover
+
+/*==========  section partner-page end  ==========*/
 
 
 
