--- a/app/sass/projects.sass
+++ b/app/sass/projects.sass
@@ -45,4 +45,59 @@
   .box-text
     margin: 0 0 20px
 
-/*==========  section end  ==========*/
+/*==========  project end  ==========*/
+
+
+/*==========  project page ==========*/
+.project-page
+  margin: 0 0 80px
+
+.sidebar
+  width: 100%
+
+.btn-close-sidebar
+  display: none
+  width: 24px
+  height: 24px
+  position: relative
+  margin: 0 0 20px auto
+  cursor: pointer
+  &:before, &:after
+    content: ''
+    position: absolute
+    left: 12px
+    top: 0
+    width: 2px
+    height: 100%
+    background: $accent
+  &:before
+    transform: rotate(45deg)
+  &:after
+    transform: rotate(135deg)
+
+.description-text
+  margin: 0 0 120px
+  color: #676767
+
+.menu-project
+  width: 100%
+  font-size: 18px
+  li
+    width: 100%
+    margin: 0 0 10px
+    &:last-child
+      margin: 0
+    a
+      padding: 13px 32px
+      border-radius: 30px
+      width: 100%
+      color: #676767
+      &:hover
+        background: $accent
+        color: #fff
+        font-weight: bold
+      &.active
+        background: $accent
+        color: #fff
+
+/*==========  project page end ==========*/
