--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -65,7 +65,7 @@ a
   text-decoration: none
   transition: .3s ease
   outline: none
-
+  width: fit-content
   &:hover, &:focus
     text-decoration: none
     
@@ -213,6 +213,9 @@ a.color-accent
 
 .mb-30
   margin-bottom: 30px
+
+.mb-35
+  margin-bottom: 35px
 
 .mb-40
   margin-bottom: 40px
