--- a/app/css/command.css
+++ b/app/css/command.css
@@ -1,4 +1,124 @@
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
-/*==========  section  ==========*/
-/*==========  section end  ==========*/
+/*==========  section command ==========*/
+.command {
+  margin: 0 0 90px; }
+  .command .mission-img {
+    height: 365px; }
+
+.command-section {
+  margin: 0 0 85px; }
+
+.command-box {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15);
+  border-radius: 40px;
+  padding: 42px 29px;
+  font-size: 18px; }
+  .command-box__img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    overflow: hidden;
+    width: 213px;
+    height: 213px;
+    border-radius: 50%; }
+    .command-box__img img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
+  .command-box__body {
+    width: calc(100% - 213px);
+    padding: 0 0 0 45px; }
+  .command-box h4 {
+    margin: 0 0 24px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #676767; }
+  .command-box .links {
+    margin: 25px 0 0; }
+  .command-box__info {
+    max-width: 190px;
+    line-height: 25px; }
+
+/*==========  section command end  ==========*/
+/*==========  section userModal ==========*/
+#userModal .modal-dialog {
+  max-width: 1254px; }
+
+#userModal .modal-content {
+  padding: 75px 60px 80px 79px; }
+
+#userModal .modal-header {
+  margin: 0; }
+  #userModal .modal-header .close {
+    top: 40px;
+    right: 40px; }
+
+#userModal .modal-title {
+  text-align: left;
+  margin: 0 0 32px; }
+
+.command-box-modal {
+  max-width: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 0;
+  border-radius: 0; }
+  .command-box-modal .box-text {
+    text-align: left;
+    max-width: none;
+    font-size: 18px;
+    line-height: 21px; }
+  .command-box-modal .command-box__info {
+    max-width: none;
+    margin: 0 0 38px;
+    font-size: 24px;
+    line-height: 33px; }
+  .command-box-modal .command-box__img {
+    width: 286px;
+    height: 286px; }
+  .command-box-modal .command-box__body {
+    width: calc(100% - 286px);
+    padding: 0 0 0 98px; }
+
+/*==========  section userModal end  ==========*/
+/*==========  section expert ==========*/
+.expert {
+  margin: 0 0 115px; }
+
+.command-box-max {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 38px 43px 42px 46px; }
+  .command-box-max .command-box__body {
+    width: calc(100% - 179px);
+    padding: 0 0 0 63px; }
+  .command-box-max .command-box__img {
+    width: 179px;
+    height: 179px;
+    margin: 10px 0 0; }
+  .command-box-max .command-box__info {
+    max-width: none; }
+  .command-box-max .box-text {
+    margin: 20px 0 0; }
+
+/*==========  section expert end ==========*/
