--- a/app/sass/command.sass
+++ b/app/sass/command.sass
@@ -1,14 +1,115 @@
 @import "vars"
 
-/*==========  section  ==========*/
+/*==========  section command ==========*/
+.command
+  margin: 0 0 90px
+  .mission-img
+    height: 365px
 
-/*==========  section end  ==========*/
+.command-section
+  margin: 0 0 85px
+
+.command-box
+  width: 100%
+  height: 100%
+  background: #fff
+  display: flex
+  align-items: center
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15)
+  border-radius: 40px
+  padding: 42px 29px
+  font-size: 18px
+  &__img
+    display: flex
+    align-items: center
+    justify-content: center
+    overflow: hidden
+    width: 213px
+    height: 213px
+    border-radius: 50%
+    img
+      width: 100%
+      height: 100%
+      object-fit: cover
+  &__body
+    width: calc(100% - 213px)
+    padding: 0 0 0 45px
+  h4
+    margin: 0 0 24px
+    font-size: 20px
+    font-weight: bold
+    color: #676767
+  .links
+    margin: 25px 0 0
+  &__info
+    max-width: 190px
+    line-height: 25px
+/*==========  section command end  ==========*/
 
 
 
-/*==========  section  ==========*/
+/*==========  section userModal ==========*/
+#userModal
+  .modal-dialog
+    max-width: 1254px
+  .modal-content
+    padding: 75px 60px 80px 79px
+  .modal-header
+    margin: 0
+    .close
+      top: 40px
+      right: 40px
+  .modal-title
+    text-align: left
+    margin: 0 0 32px
 
-/*==========  section end  ==========*/
+.command-box-modal
+  max-width: none
+  box-shadow: none
+  align-items: flex-start
+  padding: 0
+  border-radius: 0
+  .box-text
+    text-align: left
+    max-width: none
+    font-size: 18px
+    line-height: 21px
+  .command-box__info
+    max-width: none
+    margin: 0 0 38px
+    font-size: 24px
+    line-height: 33px
+  .command-box__img
+    width: 286px
+    height: 286px
+  .command-box__body
+    width: calc(100% - 286px)
+    padding: 0 0 0 98px
+
+/*==========  section userModal end  ==========*/
+
+
+/*==========  section expert ==========*/
+.expert
+  margin: 0 0 115px
+
+
+.command-box-max
+  align-items: flex-start
+  padding: 38px 43px 42px 46px
+  .command-box__body
+    width: calc(100% - 179px)
+    padding: 0 0 0 63px
+  .command-box__img
+    width: 179px
+    height: 179px
+    margin: 10px 0 0
+  .command-box__info
+    max-width: none
+
+  .box-text
+    margin: 20px 0 0
+/*==========  section expert end ==========*/
 
 
 
