--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -109,6 +109,21 @@
     font-size: 18px
     margin: 0 30px 0 auto
 
+  .command
+    margin: 0 0 50px
+
+  .command-box
+    padding: 20px
+    &__img
+      width: 170px
+      height: 170px
+    &__body
+      width: calc(100% - 170px)
+      padding: 0 0 0 20px
+
+  .command-section
+    margin: 0 0 60px
+
 @media only screen and (max-width: 1240px)
   .info-link
     max-width: none
@@ -236,6 +251,42 @@
     &__body
       padding: 0 0 0 20px
 
+  .command-box
+    &__img
+      width: 80px
+      height: 80px
+    &__body
+      width: calc(100% - 80px)
+    h4
+      margin: 0 0 10px
+    .links
+      margin: 10px 0 0
+
+  .command-box-max
+    padding: 30px
+    .command-box__img
+      width: 150px
+      height: 150px
+    .command-box__body
+      padding: 0 0 0 20px
+      width: calc(100% - 150px)
+
+  .article
+    h1
+      margin: 0 0 30px
+    .box-text
+      margin: 0 0 30px
+      p
+        margin: 0 0 20px
+
+  .article-image
+    margin: 60px 0
+
+  .recommended-article
+    margin: 0 0 80px
+    h2
+      margin: 0 0 30px
+
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px)
   .actual-quote-item
@@ -318,6 +369,58 @@
 
   .btn-sidebar
     margin: 0 0 30px
+
+  .command .mission-img
+    height: auto
+
+  .command-section
+    margin: 0 0 30px
+
+  #userModal
+    .modal-content
+      padding: 30px
+    .modal-title
+      margin: 0 0 20px
+    .modal-header
+      .close
+        top: 20px
+        right: 20px
+
+  .command-box-modal
+    .command-box__img
+      width: 200px
+      height: 200px
+    .command-box__body
+      width: calc(100% - 200px)
+      padding: 0 0 0 30px
+    .command-box__info
+      font-size: 18px
+      margin: 0 0 20px
+      line-height: normal
+    .box-text
+      font-size: 16px
+
+  .command-box-max
+    flex-direction: column
+    align-items: flex-start
+    .command-box__body
+      width: 100%
+      padding: 0
+      margin: 20px 0 0
+    .command-box__img
+      margin: 0 auto
+    .command-box__info, h4
+      text-align: center
+
+  .article .mission-img
+    margin: 0 0 20px 0
+    height: auto
+
+  .article-image
+    margin: 30px 0
+
+  .recommended-article
+    margin: 0 0 50px
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px)
@@ -413,13 +516,24 @@
   .partner-info
     margin: 0 0 30px
 
-
-
   .partner-content .box-text
     font-size: 16px
     line-height: normal
     p
       margin: 0 0 20px
+
+  .mb-35
+    margin-bottom: 25px
+
+  .command-box-modal
+    padding: 0
+    flex-wrap: wrap
+    .command-box__body
+      padding: 0
+      width: 100%
+      margin: 20px 0 0
+    .command-box__img
+      margin: 0 auto
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 576px)
@@ -542,6 +656,15 @@
   .partner-links
     font-size: 18px
 
+  .article-image
+    height: auto
+
+  .breadcrumb
+    font-size: 14px
+
+  .link-web
+    font-size: 14px
+
 @media only screen and (max-width: 480px)
   .actual-quote-item
     .box-text
@@ -576,9 +699,6 @@
     margin: 20px 0 0
     width: 100%
 
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width: 320px)
-  /**/
-
+  .link-web
+    font-size: 12px
 
