--- a/app/css/header.css
+++ b/app/css/header.css
@@ -76,6 +76,19 @@ header {
     border-radius: 10px;
   -webkit-box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15); }
+  .dropdown-menu li {
+    width: 100%;
+    margin: 0;
+    position: relative; }
+    .dropdown-menu li a {
+      color: #676767; }
+  .dropdown-menu .dropdown-submenu {
+    top: 0;
+    left: 100%;
+    border-radius: 0;
+    max-width: 250px; }
+    .dropdown-menu .dropdown-submenu .dropdown-item {
+      white-space: normal; }
 
 .dropdown-item {
   padding: 10px 24px 10px 17px;
@@ -160,6 +173,8 @@ header {
   .mobile-menu .logo-text {
     margin: 0;
     max-width: none; }
+  .mobile-menu .dropdown-submenu {
+    padding-left: 10px; }
 
 .btn-close {
   position: absolute;
